deploy-operator.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    operated-prometheus: 'true'
  name: prometheus-operated
  namespace: tomcat-prometheus
spec:
  host: prometheus-operated-tomcat-prometheus.router.default.svc.cluster.local
  port:
    targetPort: web
  to:
    kind: Service
    name: prometheus-operated
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - host: prometheus-operated-tomcat-prometheus.router.default.svc.cluster.local
    routerName: router
    wildcardPolicy: None
